--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,21 @@
-html
+html, body
 {
-    width: 400px;  /* max: 800px */
-    height: 300px; /* max: 600px */
+    width: 100px;  
+    height: 100px; 
+    padding: 0;
+    margin: 0;
+}
+
+.running-btn {
+    width: 100px;  
+    height: 100px; 
+    margin: 0;
+    padding: 0;
+    font: inherit;
+    background-color: #1565c0;
+    outline: none;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 1rem;
 }
